[tool.poetry]
name = "journal-logger"
version = "0.1.0"
description = "A logger object that enables logging to systemd journal (`journalctl`)"
authors = ["Kiril Isakov <kirix.isakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
logging = "^0.4.9.6"
cysystemd = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
